@@ -8,6 +8,10 @@ WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 for more details.
 
-For more information about QSpeedTest, visit its current homepage
+For more information about QSpeedTest, visit its current homepage:
 http://qspeedtest.sourceforge.net/
+
+and the official phpBB forum:
+https://sourceforge.net/apps/phpbb/qspeedtest/
+
 You may also contact the author via e-mail at parsifal@binarynotion.net
