@@ -25,10 +25,10 @@
     <item row="0" column="2">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <property name="leftMargin">
-       <number>6</number>
+       <number>40</number>
       </property>
       <property name="rightMargin">
-       <number>20</number>
+       <number>0</number>
       </property>
       <item>
        <widget class="QLabel" name="labelPingsPerTarget">
@@ -82,10 +82,10 @@
        <number>6</number>
       </property>
       <property name="leftMargin">
-       <number>20</number>
+       <number>40</number>
       </property>
       <property name="rightMargin">
-       <number>20</number>
+       <number>0</number>
       </property>
       <item>
        <widget class="QLabel" name="labelParallelThreads">
