@@ -27,6 +27,7 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 #include "externs.h"
 #include "mainwindow.h"
 #include "targetlist.h"
+#include "filehost.h"
 
 
 class QSpeedTest : public QApplication
@@ -39,6 +40,7 @@ class QSpeedTest : public QApplication
     private:
         MainWindow mainWindow;
         TargetList targetList;
+        QList<FileHost> fileHosts;
         QString vBulletinCode;
         QString HTML;
         QString testDateTime;
